@@ -30,12 +30,12 @@ use POSIX;
 use IO::Handle;
 use File::Temp ();
 use FileHandle;
-use Cwd qw(cwd);
 use Sbuild qw(basename binNMU_version version_compare);
 
 package conf;
 use Sbuild::Conf;
 package main;
+use Sbuild::Conf qw($cwd $nolog $username $verbose); # For backward compatibility.
 use Sbuild::Chroot qw(begin_session end_session get_command_internal
                       get_command run_command exec_command
                       get_apt_command_internal get_apt_command
@@ -57,7 +57,6 @@ chomp( $main::HOSTNAME = `hostname` );
 $main::distribution = "unstable";
 
 chomp( $main::arch = `$conf::dpkg --print-installation-architecture` );
-$main::verbose = 0;
 $main::batchmode = 0;
 $main::auto_giveback = 0;
 $main::build_arch_all = 0;
@@ -65,7 +64,6 @@ $main::build_source = 0;
 $main::jobs_file = "build-progress";
 $main::max_lock_trys = 120;
 $main::lock_interval = 5;
-$main::cwd = cwd();
 $main::srcdep_lock_dir = "";
 $main::ilock_file = "";
 $main::srcdep_lock_cnt = 0;
@@ -87,7 +85,7 @@ if (! -d "$conf::build_dir") {
 
 # Be verbose by default if on a tty
 if (-t STDIN && -t STDOUT && $main::verbose == 0) {
-    $main::verbose = 1;
+    $conf::verbose = 1;
 }
 
 # Find chroots
@@ -96,12 +94,12 @@ Sbuild::Chroot::init();
 while( @ARGV && $ARGV[0] =~ /^-/ ) {
 	$_ = shift @ARGV;
 	if (/^-v$/ || /^--verbose$/) {
-		$main::verbose++;
+		$conf::verbose++;
 	}
 	elsif (/^-q$/ || /^--quiet$/) {
 		$main::verbose--;
-		if ($main::verbose < 0) {
-		    $main::verbose = 0;
+		if ($conf::verbose < 0) {
+		    $conf::verbose = 0;
 		}
 	}
 	elsif (/^-D$/ || /^--debug$/) {
@@ -111,7 +109,7 @@ while( @ARGV && $ARGV[0] =~ /^-/ ) {
 		$main::batchmode = 1;
 	}
 	elsif (/^-n$/ || /^--nolog$/) {
-		$main::nolog = 1;
+		$conf::nolog = 1;
 	}
 	elsif (/^-A$/ || /^--arch-all$/) {
 		$main::build_arch_all++;
@@ -401,7 +399,7 @@ sub fetch_source_files {
 
 		  retry:
 			print PLOG "Checking available source versions...\n";
-			my $command = get_apt_command("$conf::apt_cache", "-q showsrc $pkg 2>&1 </dev/null", $conf::username, 0);
+			my $command = get_apt_command("$conf::apt_cache", "-q showsrc $pkg 2>&1 </dev/null", $main::username, 0);
 			if (!open( PIPE, "$command |" )) {
 				print PLOG "Can't open pipe to apt-cache: $!\n";
 				return ("ERROR");
@@ -437,7 +435,7 @@ sub fetch_source_files {
 			print PLOG "Fetching source files...\n";
 			@made = @{$entries{$version}};
 
-			my $command2 = get_apt_command("$conf::apt_get", "--only-source -q -d source $pkg=$version 2>&1 </dev/null", $conf::username, 0);
+			my $command2 = get_apt_command("$conf::apt_get", "--only-source -q -d source $pkg=$version 2>&1 </dev/null", $main::username, 0);
 			if (!open( PIPE, "$command2 |" )) {
 				print PLOG "Can't open pipe to $conf::apt_get: $!\n";
 				return ("ERROR", @made);
@@ -566,7 +564,7 @@ sub build {
 				system ("rm -fr $tmpunpackdir") if -d $tmpunpackdir;
 				exit 1;
 			}
-			exec_command("$conf::dpkg_source -sn -x $main::cwd/$dsc 2>&1", $conf::username, 0, 0);
+			exec_command("$conf::dpkg_source -sn -x $main::cwd/$dsc 2>&1", $main::username, 0, 0);
 		}
 		$main::sub_task = "dpkg-source";
 		
@@ -620,7 +618,7 @@ sub build {
 		}
 		if ($main::sub_pid == 0) {
 			chdir( $dir );
-			exec_command("dpkg-parsechangelog 2>&1", $conf::username, 0, 0);
+			exec_command("dpkg-parsechangelog 2>&1", $main::username, 0, 0);
 		}
 		$main::sub_task = "dpkg-parsechangelog";
 
@@ -770,7 +768,7 @@ EOF
 				 "LD_LIBRARY_PATH=".$main::ld_library_path." " : "").
 				 "exec $conf::build_env_cmnd dpkg-buildpackage $conf::pgp_options ".
 				 "$binopt $main::dpkg_buildpackage_signopt -r$conf::fakeroot 2>&1";
-			exec_command($buildcmd, $conf::username, 1, 1);
+			exec_command($buildcmd, $main::username, 1, 1);
 		}
 		else {
 			if (-f "/etc/ld.so.conf" && ! -r "/etc/ld.so.conf") {
@@ -778,7 +776,7 @@ EOF
 				print PLOG "ld.so.conf was not readable! Fixed.\n";
 			}
 			exec_command("$conf::build_env_cmnd dpkg-buildpackage $conf::pgp_options $binopt ".
-				     "$main::dpkg_buildpackage_signopt -r$conf::fakeroot 2>&1", $conf::username, 0, 1);
+				     "$main::dpkg_buildpackage_signopt -r$conf::fakeroot 2>&1", $main::username, 0, 1);
 		}
 	}
 	$main::sub_task = "dpkg-buildpackage";
@@ -970,7 +968,7 @@ sub apply_patches {
 			if ($main::sub_pid == 0) {
 				open( STDOUT, ">&PLOG" );
 				open( STDERR, ">&PLOG" );
-				exec_command("patch --batch --quiet -p1 -E -N --no-backup-if-mismatch", $conf::username, 0, 0);
+				exec_command("patch --batch --quiet -p1 -E -N --no-backup-if-mismatch", $main::username, 0, 0);
 			}
 			$main::sub_task = "patch";
 
@@ -1180,7 +1178,7 @@ sub unpack_special_source {
 		my $dsc;
 
 		{
-			my $command = get_apt_command("$conf::apt_get", "--only-source -q -d source $s 2>&1 </dev/null", $conf::username, 0);
+			my $command = get_apt_command("$conf::apt_get", "--only-source -q -d source $s 2>&1 </dev/null", $main::username, 0);
 			if (!open( PIPE, "$command |" )) {
 				print PLOG "Can't open pipe to apt-get: $!\n";
 				goto failed;
@@ -1217,7 +1215,7 @@ sub unpack_special_source {
 				print PLOG "Couldn't cd to $main::chroot_build_dir: $! -- special unpack failed\n";
 				exit 1;
 			}
-			exec_command("$conf::dpkg_source -sn -x $main::cwd/$dsc 2>&1", $conf::username, 0);
+			exec_command("$conf::dpkg_source -sn -x $main::cwd/$dsc 2>&1", $main::username, 0);
 		}
 		my $dir;
 		while( <PIPE> ) {
@@ -1747,9 +1745,9 @@ sub run_script {
 		open( STDOUT, ">&PLOG" );
 		open( STDERR, ">&PLOG" );
 		if ($main::chroot_dir) {
-			exec_command("cd /build/$conf::username && set $e_mode && $x_mode$script", $conf::username, 1, 0);
+			exec_command("cd /build/$main::username && set $e_mode && $x_mode$script", $main::username, 1, 0);
 		} else {
-			exec_command("set $e_mode && $x_mode$script", $conf::username, 0, 0);
+			exec_command("set $e_mode && $x_mode$script", $main::username, 0, 0);
 		}
 		die "Can't exec /bin/sh: $!\n";
 	}
@@ -2165,7 +2163,7 @@ sub get_dependencies {
 	local(*PIPE);
 	my %deps;
 	
-	my $command = get_apt_command("$conf::apt_cache", "show @_ 2>&1", $conf::username, 0);
+	my $command = get_apt_command("$conf::apt_cache", "show @_ 2>&1", $main::username, 0);
 	open( PIPE, "$command |" )
 		or die "Cannot start $conf::apt_cache $!\n";
 	local($/) = "";
@@ -2188,7 +2186,7 @@ sub get_dependencies {
 sub get_virtuals {
 	local(*PIPE);
 
-	my $command = get_apt_command("$conf::apt_cache", "showpkg @_ 2>&1", $conf::username, 0);
+	my $command = get_apt_command("$conf::apt_cache", "showpkg @_ 2>&1", $main::username, 0);
 	open( PIPE, "$command |" )
 		or die "Cannot start $conf::apt_cache: $!\n";
 	my $name;
@@ -2362,7 +2360,7 @@ sub check_space {
 			$_ =~ s/^\Q$main::chroot_dir\E//;
 			$command = get_command("/usr/bin/du -s $_ 2>/dev/null", "root", 1, 0);
 		} else {
-			$command = get_command("/usr/bin/du -s $_ 2>/dev/null", $conf::username, 0, 0);
+			$command = get_command("/usr/bin/du -s $_ 2>/dev/null", $main::username, 0, 0);
 		}
 
 		if (!open( PIPE, "$command |" )) {
